feat: add guardianId filter in classes endpoints (query)
