# openapi.json
@@ -1580,6 +1580,14 @@
           },
           {
             "in": "query",
+            "name": "guardianId",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Optional filter by guardianId (ignored for role guardian)"
+          },
+          {
+            "in": "query",
             "name": "studentId",
             "schema": {
               "type": "integer"
@@ -1667,6 +1675,14 @@
               "type": "integer"
             },
             "description": "Optional filter by tutorId (ignored for role tutor)"
+          },
+          {
+            "in": "query",
+            "name": "guardianId",
+            "schema": {
+              "type": "integer"
+            },
+            "description": "Optional filter by guardianId (ignored for role guardian)"
           },
           {
             "in": "query",
